--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-C:\Users\azati\OneDrive\Рабочий стол\Новая папка\LionCinema\Kursach_Ras Test\Kursach_Ras\Kursach_Ras.Android\obj\
+\Kursach_Ras Test\Kursach_Ras\Kursach_Ras.Android\obj\
